--- a/templates/prepend.html
+++ b/templates/prepend.html
@@ -27,7 +27,7 @@
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="/recipes">Recipes</a></li>
+          <li><a href="#region">Recipes</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
