create nav bar inside Jinja template
This update simplifies the generation of link lists into a simple dict,
which is then consumed by the template.
In future, I will do the same for the "branches" index inside folders,
but for now I'm not sure how to work around the nesting of header tags
I've incorporated into the function that creates this index.

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,13 @@
   <body>
     <header>
       {% if nav %}
-      <div id="nav">{{ nav|safe }}</div>
+      <div id="nav">
+        <ul>
+          {% for item in nav %}
+          <li><a href="{{ item.href }}">{{ item.caption }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
       {% endif %}
     </header>
     <hr id="start" />
