--- a/templates/base.html
+++ b/templates/base.html
@@ -37,8 +37,8 @@
     <hr id="end" />
     <footer>
       <p>
-        This site was statically generated using homemade scripts. Find out more
-        <a href="/about.html">here</a>.
+        This site was statically generated using homemade scripts.
+        <a href="/about.html">Find out more</a>.
       </p>
     </footer>
   </body>
